--- a/app/views/question/answer.html.erb
+++ b/app/views/question/answer.html.erb
@@ -1,12 +1,12 @@
 <h1>Stupid Coaching</h1>
 <div class = "question">
 <p> <%= @question %> </p>
-<p> - You </p>
+<p> <i> - You </i> </p>
 </div>
 
 <div class = "answer">
-<p><%= @answer %> </p>
-<p> - Your Coach </p>
+<p> <b> <%= @answer %> </b> </p>
+<p> <i> - Your Coach </i> </p>
 </div>
 
 <a href="/ask">Ask another question</a>
